# parallel-computing

./: CMakeLists.txt
src/: Makefile  main.cpp  utils.cpp  utils.h
